--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NODE_ENV=development
 PORT=8000
 MONGO_URI=mongodb+srv://mouhamadhaydar052:5550125@cluster0.jwrusl2.mongodb.net/proshop?retryWrites=true&w=majority
+JWT_SECRET=shadow
